# supabase-function-rs

./: Cargo.toml  LICENSE  README.md
src/: client.rs  errors.rs  lib.rs  models.rs
tests/: functions_client_tests.rs
