[package]
name = "supabase-function-rs"
authors = ["Emmanuel ADEBAYO <emmanueltolu.adebayo@gmail.com>"]
description = "A Rust client for the Supabase Function API"
version = "0.1.1"
edition = "2021"
license = "MIT"
repository = "https://github.com/toluwaanimi/supabase-function-rs"

[dependencies]
serde = { version = "1.0.203", features = ["derive"] }
serde_json = "1.0.120"
ureq = { version = "^2.6", features = ["json"] }
reqwest = { version = "0.12.5", features = ["json", "multipart"] }
tokio = { version = "1", features = ["full"] }
bytes = "1.6.0"


[dev-dependencies]
mockito = "0.31.0"
